2001-12-08  Dave Peticolas  <dave@krondo.com>

	* Makefile.am (Repository): clean .scm-links

2001-11-28  Rob Browning  <rlb@defaultvalue.org>

	* .cvsignore: add .scm-links

	* lib/guile-www/Makefile.am
	(.scm-links): create so we can run from gnucash build dir.

2001-02-04  Marius Vollmer  <mvo@zagadka.ping.de>

	* http.scm: Use (ice-9 rdelim) if `read-line' not defined.  Thanks
	to Thien-Thi Nguyen.

2000-06-04  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* main.scm (www:get): Pass url as single arg.
	(Thanks to Dale	P. Smith.)

1998-07-27  Jim Blandy  <jimb@red-bean.com>

        * Test of EGCS repository access.

1997-12-24  Tim Pierce  <twp@skepsis.com>

	* cgi.scm (init-environment): Make server-software and
	server-protocol optional.

1997-12-22  Tim Pierce  <twp@skepsis.com>

	* cgi.scm (read-raw-form-data): Add `cgi-' to content-length.
	(parse-form): Change `url-decode' to `url:decode'.

Mon Oct 20 18:06:10 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	* configure.in: Update version to 1.0b.
	configure: Regenerated.

	* Makefile.in, aclocal.m4, configure: Regenerated w/automake 1.2c.

	* url.scm (url:scheme, url:host, url:port, url:path): Move
	accessors up.
	(url:address): New accessor for "mailto:" URLs.
	(url:unknown): New accessor for unrecognized URL types.
	(url:user): New accessor for "ftp" URLs.
	(url:make, url:make-http, url:make-ftp, url:make-mailto): New
	constructors for URL objects.
	(url-regexp): Replaced by...
	(http-regexp, ftp-regexp, mailto-regexp): Separate regular
	expressions for different URL schemes.
	(url:parse): Use the above to handle ftp and mailto URLs, and also
	do something graceful with unrecognized garbage.
	(url:unparse): New function, for turning a parsed url into a
	string.
	
	* http.scm (add-open-connection!, get-open-connection): Incomplete
 	code replaced with dummy definitions, so we can give it to Mikael
	immediately.
	(http:request): Close the socket after we're done reading the
	body.
